components/opennotebook/overlays/prod/opennotebook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opennotebook
  namespace: opennotebook
spec:
  type: ClusterIP
  selector:
    app: opennotebook
  ports:
  - port: 8502
    targetPort: 8502
    protocol: TCP
    name: web
  - port: 5055
    targetPort: 5055
    protocol: TCP
    name: api
