components/opennotebook/overlays/prod/surrealdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: opennotebook
spec:
  type: ClusterIP
  selector:
    app: surrealdb
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
